# V2rayOH

./: README.md  build-profile.json5  config.yaml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  vpn_client.cpp
entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/v2rayvpnext/: V2rayVpnExt.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
